@@ -61,3 +61,22 @@ Info: This info document has no directory entry.  This is text between
  appropriate entry.  You will have to ensure that the build process builds
  new info files rather than using ones built by upstream.
 
+Tag: info-document-missing-image-file
+Severity: normal
+Certainty: certain
+Info: This info document contains an "[image]" but the image file it
+ specifies is missing.  Texinfo <tt>@image{}</tt> becomes
+ .
+  [image src="filename.png"]
+ .
+ in the <tt>.info</tt>.  Emacs 22 and up info
+ mode can display this in a GUI if filename.png is in
+ <tt>/usr/share/info</tt> or if the src gives a path to the file
+ elsewhere.
+ .
+ If you put an image file in <tt>/usr/share/info</tt> then please name
+ it like the document so as to avoid name clashes.  Eg. foo.info might
+ call an image foo-example1.png.  If upstream does not do this already
+ then it may be easier to <tt>sed</tt> the <tt>src=""</tt> to a path
+ elsewhere, perhaps to share with a HTML rendition under say
+ <tt>/usr/share/doc/foo/html/</tt>.
